--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
+
+:root{
+    --bege: #f3e9dcff;
+    --caramelo: #c08552ff;
+    --caputino: #5e3023ff;
+    --marrom: #895737ff;
+    --creme: #dab49dff;
+    --fonte-titulo: "Saira Condensed", sans-serif;
+    --fonte-texto: "Bebas Neue", sans-serif;
+}
+body{
+    background-color: var(--creme);
+    font-family: var(--fonte-texto);
+}
+
+
 h1{
+
     background-color: #08d7fb;
 }
